// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Listen A11y I can see the skip to content link 1`] = `"مشاهده محتوا"`;

exports[`Canonical Listen Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Listen Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Listen Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "142",
  },
  {
    "p": "dari.listen.c4z1p12mn62po.page",
  },
  {
    "x1": "[urn:bbc:optimo:asset:c4z1p12mn62po]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-dari]",
  },
  {
    "x4": "[fa-af]",
  },
  {
    "x7": "[article-sfv]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Test]",
  },
  {
    "x11": "[2026-10-01T15:03:40.285Z]",
  },
  {
    "x12": "[2026-10-02T14:34:31.985Z]",
  },
]
`;

exports[`Canonical Listen Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, دری",
  "url": "/dari",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 2`] = `
{
  "text": "چرا می‌توانید به بی‌بی‌سی اطمینان کنید؟",
  "url": "https://www.bbc.com/dari/articles/c8jpnremrrvo",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 3`] = `
{
  "text": "شرایط استفاده",
  "url": "https://www.bbc.com/dari/articles/cy85mvgyr23o",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 4`] = `
{
  "text": "در باره بی‌بی‌سی",
  "url": "https://www.bbc.com/dari/articles/cjeyjknpvn5o",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 5`] = `
{
  "text": "سیاست حفظ حریم خصوصی",
  "url": "https://www.bbc.com/dari/articles/cq5860pd7q3o",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 6`] = `
{
  "text": "کوکی ها",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 7`] = `
{
  "text": "تماس با بی‌بی‌سی",
  "url": "https://www.bbc.com/dari/send/u214757345",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 8`] = `
{
  "text": "اخبار به زبان‌های دیگر",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Listen Footer Anchors should match text and url 9`] = `
{
  "text": "سیاست ما درباره لینک دادن به سایت های دیگر.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Listen Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/dari"`;

exports[`Canonical Listen Footer Paragraphs should match text 1`] = `"© 2026 بی بی سی. بی بی سی مسئول محتوای سایت های دیگر نیست. سیاست ما درباره لینک دادن به سایت های دیگر."`;

exports[`Canonical Listen Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, دری",
  "svg": <path
    d="M175.28242,212.59656c-7.73097-12.38836-15.56197-24.80214-23.48976-37.24187-7.9305-12.43703-15.75934-24.50473-23.48976-36.2004v73.44228h-22.00327V106.29836h23.19235c8.02837,11.99308,15.93075,24.00995,23.71309,36.05224,7.77909,12.04175,15.53547,24.25815,23.26644,36.64652V106.29836h22.00327v106.2982h-23.19235Z"
  />,
}
`;

exports[`Canonical Listen Header Navigation link should match text and url 1`] = `
{
  "text": "صفحه اول",
  "url": "/dari",
}
`;

exports[`Canonical Listen Image Caption should match text 1`] = `"توضیح صدا، Test Audio For Optimo"`;

exports[`Canonical Listen Image should match snapshot 1`] = `
<noscript>
  <div>
    <div
      class="css-1tf8nym"
    >
      <strong
        class="css-1mo6435"
      >
        برای پخش این فایل لطفا جاوا اسکریپت را فعال یا از یک مرورگر دیگر استفاده کنید.
      </strong>
    </div>
  </div>
</noscript>
`;

exports[`Canonical Listen Main heading should match text 1`] = `"syndication test run"`;

exports[`Canonical Listen Media Loader renders a valid container 1`] = `
<figure
  class="media-container css-1ocpd8x"
  data-e2e="media-loader__container"
>
  <div
    class="css-zmtwe4"
    data-simorgh-media-loader="inactive"
  >
    <div
      class="media-player css-mw2k38"
      data-e2e="media-player"
    >
      <noscript>
        <div>
          <div
            class="css-1tf8nym"
          >
            <strong
              class="css-1mo6435"
            >
              برای پخش این فایل لطفا جاوا اسکریپت را فعال یا از یک مرورگر دیگر استفاده کنید.
            </strong>
          </div>
        </div>
      </noscript>
    </div>
  </div>
  <figcaption
    class="css-tghcbx"
    dir="rtl"
  >
    <span
      role="text"
    >
      <span
        class="css-ju1gaf"
      >
        توضیح صدا، 
      </span>
      <span
        data-testid="caption-paragraph"
      >
        Test Audio For Optimo
      </span>
    </span>
  </figcaption>
</figure>
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/dari/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/dari/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/dari/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/dari/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Listen SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/dari/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Listen SEO Canonical link 1`] = `"http://localhost:7081/dari/listen/c4z1p12mn62po"`;

exports[`Canonical Listen SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical Listen SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Listen SEO Heading level 1 1`] = `"syndication test run"`;

exports[`Canonical Listen SEO Lang attribute 1`] = `"fa-af"`;

exports[`Canonical Listen SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/dari/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News دری",
        "noBylinesPolicy": "https://www.bbc.com/dari/articles/c8jpnremrrvo",
      },
      "dateModified": "2026-10-02T14:34:31.985Z",
      "datePublished": "2026-10-01T15:03:40.285Z",
      "headline": "Test",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_dari/p01vkjg8.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "prs",
        "name": "Dari",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/dari/listen/c4z1p12mn62po",
        "@type": "WebPage",
        "name": "Test",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/dari/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News دری",
        "publishingPrinciples": "https://www.bbc.com/dari/articles/c8jpnremrrvo",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_dari/p01vkjg8.png",
      "url": "http://localhost:7081/dari/listen/c4z1p12mn62po",
    },
  ],
}
`;

exports[`Canonical Listen SEO Linked data should match text 2`] = `
{
  "@context": "http://schema.org",
  "@type": "AudioObject",
  "description": "Sound Effect",
  "duration": "PT3S",
  "embedURL": "https://www.test.bbc.com/ws/av-embeds/articles/c4z1p12mn62po/p01w99jg/prs",
  "name": "Test Audio For Optimo",
  "thumbnailUrl": "https://ichef.test.bbci.co.uk/images/ic/1024x576/p01vkjg8.png",
  "uploadDate": "2024-10-03T10:23:31.000Z",
}
`;

exports[`Canonical Listen SEO OG description 1`] = `"Test"`;

exports[`Canonical Listen SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_dari/p01vkjg8.png"`;

exports[`Canonical Listen SEO OG image alt 1`] = `"BBC flat logo 2023 default image"`;

exports[`Canonical Listen SEO OG locale 1`] = `"fa-AF"`;

exports[`Canonical Listen SEO OG site name 1`] = `"BBC News دری"`;

exports[`Canonical Listen SEO OG title 1`] = `"Test - BBC News دری"`;

exports[`Canonical Listen SEO OG type 1`] = `"article"`;

exports[`Canonical Listen SEO OG url 1`] = `"http://localhost:7081/dari/listen/c4z1p12mn62po"`;

exports[`Canonical Listen SEO Page title 1`] = `"Test - BBC News دری"`;

exports[`Canonical Listen SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Listen SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Listen SEO Twitter creator 1`] = `"@bbcafghanistan"`;

exports[`Canonical Listen SEO Twitter description 1`] = `"Test"`;

exports[`Canonical Listen SEO Twitter image alt 1`] = `"BBC flat logo 2023 default image"`;

exports[`Canonical Listen SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_dari/p01vkjg8.png"`;

exports[`Canonical Listen SEO Twitter site 1`] = `"@bbcafghanistan"`;

exports[`Canonical Listen SEO Twitter title 1`] = `"Test - BBC News دری"`;

exports[`Canonical Listen Timestamp should match text and date 1`] = `
{
  "date": "2026-10-01",
  "text": "۱ اکتوبر ۲۰۲۶",
}
`;
